updated to add thread, normal service and coroutine

--- a/MyIntentService/app/src/main/AndroidManifest.xml
+++ b/MyIntentService/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
 
         <service android:name=".ABCIntentService"></service>
+        <service android:name=".ABCService"></service>
     </application>
 
 </manifest>
