--- a/MyIntentService/app/src/main/AndroidManifest.xml
+++ b/MyIntentService/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
 
         <service android:name=".ABCIntentService"></service>
         <service android:name=".ABCService"></service>
+        <service android:name=".NotificationService"></service>
     </application>
 
 </manifest>
