--- a/MyIntentService/app/src/main/AndroidManifest.xml
+++ b/MyIntentService/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <service android:name=".ABCIntentService"></service>
         <service android:name=".ABCService"></service>
         <service android:name=".NotificationService"></service>
+        <service android:name=".ServiceWithBind"></service>
     </application>
 
 </manifest>
